--- a/CsharpSlam/VrepSimpleTest/CsharpSlam.csproj
+++ b/CsharpSlam/VrepSimpleTest/CsharpSlam.csproj
@@ -65,6 +65,7 @@
     </Compile>
     <Compile Include="Control.cs" />
     <Compile Include="IRobot.cs" />
+    <Compile Include="Layers.cs" />
     <Compile Include="Localization.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -73,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MapBuilder.cs" />
+    <Compile Include="Pose.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
