--- a/CsharpSlam/VrepSimpleTest/CsharpSlam.csproj
+++ b/CsharpSlam/VrepSimpleTest/CsharpSlam.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{9206B916-C21B-43BE-876A-7F3A34C9487A}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VrepSimpleTest</RootNamespace>
+    <RootNamespace>CSharpSlam</RootNamespace>
     <AssemblyName>VrepSimpleTest</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -64,7 +64,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Control.cs" />
+    <Compile Include="RobotControl.cs" />
     <Compile Include="IRobot.cs" />
     <Compile Include="Layers.cs" />
     <Compile Include="Localization.cs" />
@@ -93,7 +93,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -101,7 +100,9 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\remoteApiNETWrapper-master\remoteApiNETWrapper.csproj">
