-interface renamed to corresponds the name of the class where it has been implemented -interface extended with 2 method declarations -interface implementation fixed -GetLaserScannerData method restored to RobotControl class, and its call in the MapBuilder solved with an event instead

--- a/CsharpSlam/VrepSimpleTest/CsharpSlam.csproj
+++ b/CsharpSlam/VrepSimpleTest/CsharpSlam.csproj
@@ -64,8 +64,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="IRobotControl.cs" />
     <Compile Include="RobotControl.cs" />
-    <Compile Include="IRobot.cs" />
     <Compile Include="Layers.cs" />
     <Compile Include="Localization.cs" />
     <Compile Include="MainWindow.xaml.cs">
