-added the new class to the project

--- a/CsharpSlam/VrepSimpleTest/CsharpSlam.csproj
+++ b/CsharpSlam/VrepSimpleTest/CsharpSlam.csproj
@@ -65,6 +65,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="IRobotControl.cs" />
+    <Compile Include="MessageBoxHelper.cs" />
     <Compile Include="RobotControl.cs" />
     <Compile Include="Layers.cs" />
     <Compile Include="Localization.cs" />
