--- a/CsharpSlam/VrepSimpleTest/CsharpSlam.csproj
+++ b/CsharpSlam/VrepSimpleTest/CsharpSlam.csproj
@@ -25,6 +25,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DocumentationFile>bin\Debug\Neobotix_mapping_VREP.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -34,6 +35,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\Neobotix_mapping_VREP.XML</DocumentationFile>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
@@ -66,7 +69,9 @@
     </Compile>
     <Compile Include="IRobotControl.cs" />
     <Compile Include="MessageBoxHelper.cs" />
-    <Compile Include="RobotControl.cs" />
+    <Compile Include="RobotControl.cs">
+      <ExcludeFromStyleCop>False</ExcludeFromStyleCop>
+    </Compile>
     <Compile Include="Layers.cs" />
     <Compile Include="Localization.cs" />
     <Compile Include="MainWindow.xaml.cs">
